--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-logging.level.br.com.bb.idempotente.services=DEBUG
+logging.level.br.com.bb.compra.service=DEBUG
+logging.level.br.com.bb.compra.repository=WARN
 logging.file.name=clientes.log
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
