--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ logging.file.name=clientes.log
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
+#h2-console
 app.clients.produto.url=http://localhost:9090
