--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
+spring.application.name=proj-pedidos
+
 logging.level.br.com.bb.compra.service=DEBUG
 logging.level.br.com.bb.compra.repository=WARN
-logging.file.name=clientes.log
+#logging.file.name=clientes.log
 
+spring.datasource.url=jdbc:h2:./pedido-test
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 #h2-console
