--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ logging.level.br.com.bb.compra.service=DEBUG
 logging.level.br.com.bb.compra.repository=WARN
 #logging.file.name=clientes.log
 
-#spring.datasource.url=jdbc:h2:./pedido-test
-#spring.datasource.username=sa
-#spring.datasource.password=sa
+spring.datasource.url=jdbc:h2:./pedido-test
+spring.datasource.username=sa
+spring.datasource.password=sa
 
-spring.datasource.url=jdbc:mysql://localhost:3307/allocation?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3307/mysqldb?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #spring.redis.database=1
 spring.cache.type=simple
@@ -23,6 +23,6 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 #h2-console
 app.clients.produto.url=http://localhost:9090
